--- a/src/Styles/reset.css
+++ b/src/Styles/reset.css
@@ -27,7 +27,6 @@ button {
 
 button,
 a,
-span,
 input {
   display: block;
 }
@@ -75,4 +74,5 @@ html {
 
 body {
   font-family:"Poppins", sans-serif;
+  background-color:#050814;
 }
