--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -42,3 +42,19 @@
     #33bbcf 90.29%
   );
 }
+
+.blue__gradient {
+  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
+  filter: blur(100px);
+}
+
+.pink__gradient {
+  background: linear-gradient(90deg,  #f4c4f3 0%, #fc67fa
+   100%);
+  filter: blur(900px);
+}
+
+.white__gradient {
+  background: rgba(255, 255, 255, 0.2);
+  filter: blur(800px);
+}
