--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -49,12 +49,45 @@
 }
 
 .pink__gradient {
-  background: linear-gradient(90deg,  #f4c4f3 0%, #fc67fa
-   100%);
+  background: linear-gradient(90deg, #f4c4f3 0%, #fc67fa 100%);
   filter: blur(900px);
 }
 
 .white__gradient {
   background: rgba(255, 255, 255, 0.2);
   filter: blur(800px);
+}
+
+.get-started-btn > div::before {
+  --transition-property: transform;
+
+  inset: 0;
+  border-radius: inherit;
+  background: linear-gradient(
+    157.81deg,
+    #def9fa -43.27%,
+    #bef3f5 -21.24%,
+    #9dedf0 12.19%,
+    #7de7eb 29.82%,
+    #5ce1e6 51.94%,
+    #33bbcf 90.29%
+  );
+  z-index: -1;
+
+  transform: scale(0);
+  transform-origin: 20% 90%;
+
+  transition: transform 400ms ease-in;
+}
+
+.get-started-btn:is(:hover, :focus) .text-gradient {
+  all: unset;
+  font-size: 0.875rem;
+  color: #ffffff !important;
+
+  transition: color 250ms ease-in;
+}
+
+.get-started-btn:is(:hover, :focus) > div::before {
+  transform: scale(1);
 }
