Working in features section

--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -4,7 +4,7 @@
 
 .bg-black-gradient {
   background: linear-gradient(
-    144.39deg,  
+    144.39deg,
     #ffffff -278.56%,
     #6d6d6d -78.47%,
     #11101d 91.61%
@@ -93,5 +93,9 @@
 }
 
 .section__text {
-  line-height:1.6;
+  line-height: 1.6;
+}
+
+.btn:hover {
+  background:#33bbcf;
 }
